<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/main_constraint_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/title_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/welcome_text"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="25sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/check_in_date_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/check_in_date"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title_text_view"
                android:layout_marginStart="10dp" />

            <DatePicker
                android:id="@+id/check_in_date_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="@id/check_in_date_text_view"
                app:layout_constraintTop_toBottomOf="@id/check_in_date_text_view" />

            <TextView
                android:id="@+id/check_out_date_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/check_out_date"
                android:textColor="?android:textColorPrimary"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@id/check_in_date_text_view"
                app:layout_constraintTop_toBottomOf="@id/check_in_date_picker" />

            <DatePicker
                android:id="@+id/check_out_date_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="@id/check_in_date_text_view"
                app:layout_constraintTop_toBottomOf="@id/check_out_date_text_view" />

            <TextView
                android:id="@+id/number_of_guests_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_of_guests"
                android:textColor="?android:textColorPrimary"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@id/check_in_date_text_view"
                app:layout_constraintTop_toBottomOf="@id/check_out_date_picker" />

            <EditText
                android:id="@+id/number_of_guests_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/guests_count"
                android:inputType="number"
                app:layout_constraintBottom_toBottomOf="@id/number_of_guests_text_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/number_of_guests_text_view"
                app:layout_constraintTop_toTopOf="@id/number_of_guests_text_view" />

            <TextView
                android:id="@+id/search_confirm_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/number_of_guests_text_view"
                app:layout_constraintTop_toBottomOf="@id/number_of_guests_text_view" />

            <Button
                android:id="@+id/confirm_my_search_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/confirm_my_search"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/search_confirm_text_view" />

            <Button
                android:id="@+id/search_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/search"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/confirm_my_search_button" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>