<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusable="true"
    android:clickable="true"
    android:background="?android:attr/selectableItemBackground"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/hotel_name_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="0dp"
            android:text="@string/hotel_name"
            android:textColor="?android:textColorPrimary"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@id/hotel_image_view"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/price_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/hotel_name_text_view"
            app:layout_constraintStart_toStartOf="@id/hotel_name_text_view"
            android:text="@string/price"
            android:textSize="20sp"
            android:textColor="?android:textColorPrimary"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/availability_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/hotel_name_text_view"
            app:layout_constraintBottom_toBottomOf="@id/price_text_view"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="10dp"
            android:text="@string/availability"
            android:textSize="20sp"
            android:textColor="?android:textColorPrimary"
            android:layout_marginEnd="10dp" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/hotel_image_view"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            app:layout_constraintBottom_toBottomOf="@id/price_text_view"
            app:layout_constraintTop_toTopOf="@id/hotel_name_text_view"
            app:layout_constraintStart_toStartOf="parent"
            android:src="@mipmap/ic_launcher"

            android:layout_marginStart="10dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>